--- a/Airfly.html
+++ b/Airfly.html
@@ -3,30 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" src="validation.js" defer></script>
+    <title>Easy Fly</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #f9f9f9;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        .padd {
+            padding: 20px;
+        }
+
+        .space {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+        }
+
+        .button {
+            background-color: rgb(104, 48, 236);
+            color: white;
+            border: none;
+            border-radius: 10px;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+
+            .button:hover {
+                background-color: rgb(193, 154, 228);
+            }
+
+        .input {
+            border-radius: 10px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            width: 200px;
+        }
+
+        .center {
+            text-align: center;
+        }
+
+        a {
+            color: rgb(104, 48, 236);
+            text-decoration: none;
+        }
+
+            a:hover {
+                text-decoration: underline;
+            }
+
+        .label {
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-    <div class="wrapper">
-        <h1>Login</h1>
-        <p id="error-message"></p>
-        <form id="form">
-            <div>
-                <label for="email-input">
-                    <span>@</span>
-                </label>
-                <input type="email" name="email" id="email-input" placeholder="Email">
-            </div>
-            <div>
-                <label for="password-input">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M240-80q-33 0-56.5-23.5T160-160v-400q0-33 23.5-56.5T240-640h40v-80q0-83 58.5-141.5T480-920q83 0 141.5 58.5T680-720v80h40q33 0 56.5 23.5T800-560v400q0 33-23.5 56.5T720-80H240Zm240-200q33 0 56.5-23.5T560-360q0-33-23.5-56.5T480-440q-33 0-56.5 23.5T400-360q0 33 23.5 56.5T480-280ZM360-640h240v-80q0-50-35-85t-85-35q-50 0-85 35t-35 85v80Z" /></svg>
-                </label>
-                <input type="password" name="password" id="password-input" placeholder="Password">
-            </div>
-            <button type="submit">Login</button>
-        </form>
-        <p>New here? <a href="signup.html">Create an Account</a></p>
+    <!-- Login Section -->
+    <div id="login-form" class="form-container">
+        <div class="padd space label">
+            <img src="images/software logo.png" alt="Software Logo" width="200">
+        </div>
+        <div class="form-container">
+            <label for="email">Email Address</label>
+            <input type="email" id="email" class="input" placeholder="Enter your email">
+            <label for="password">Password</label>
+            <input type="password" id="password" class="input" placeholder="Enter your password">
+            <button class="button" id="signInButton">Sign in</button>
+        </div>
+        <div class="center">
+            <p>New user? <a href="#" id="createAccountLink">Create new account</a></p>
+        </div>
     </div>
+
+    <!-- Registration Section -->
+    <div id="registration-form" class="form-container hidden">
+        <div class="padd space label">
+            <img src="images/software logo.png" alt="Software Logo" width="200">
+        </div>
+        <form>
+            <label for="F_name">First name:</label><br>
+            <input type="text" id="F_name" name="F_name" placeholder="Enter your first name"><br><br>
+            <label for="L_name">Last name:</label><br>
+            <input type="text" id="L_name" name="L_name" placeholder="Enter your last name"><br><br>
+            <label for="U_name">User name:</label><br>
+            <input type="text" id="U_name" name="U_name" placeholder="Enter username"><br><br>
+            <label for="E_name">E-mail:</label><br>
+            <input type="email" id="E_name" name="E_name" placeholder="Enter your email"><br><br>
+            <label for="Password">Password:</label><br>
+            <input type="password" id="Password" name="Password" placeholder="Enter your Password"><br><br>
+            <label for="C_password">Confirm Password:</label><br>
+            <input type="password" id="C_password" name="C_password" placeholder="Confirm your password"><br><br>
+            <button type="submit" class="button">Submit</button>
+        </form>
+        <div class="center">
+            <p>Already have an account? <a href="#" id="signInLink">Sign in</a></p>
+        </div>
+    </div>
+
+    <script>
+        document.getElementById("createAccountLink").addEventListener("click", function (e) {
+            e.preventDefault();
+            document.getElementById("login-form").classList.add("hidden");
+            document.getElementById("registration-form").classList.remove("hidden");
+        });
+
+        document.getElementById("signInLink").addEventListener("click", function (e) {
+            e.preventDefault();
+            document.getElementById("registration-form").classList.add("hidden");
+            document.getElementById("login-form").classList.remove("hidden");
+        });
+
+        document.getElementById("signInButton").addEventListener("click", function () {
+            const email = document.getElementById("email").value.trim();
+            const password = document.getElementById("password").value.trim();
+            if (!email || !password) {
+                alert("Please fill in all fields.");
+                return;
+            }
+            alert("Login Successful!");
+        });
+    </script>
 </body>
 </html>
